@@ -291,6 +291,7 @@
             <exclude>org/apache/jute/**</exclude>
             <exclude>org/apache/zookeeper/**</exclude>
             <exclude>**/*.jsp</exclude>
+            <exclude>**/hbase-site.xml</exclude>
           </excludes>
         </configuration>
       </plugin>
